add reference links to component references

--- a/docs/components/customization/user-profile.mdx
+++ b/docs/components/customization/user-profile.mdx
@@ -5,104 +5,104 @@ description: Learn how to add custom pages and include external links within the
 
 # `<UserProfile />` customization
 
-The `<UserProfile />` component supports the addition of custom pages and use of external links in the navigation sidebar. 
+The [`<UserProfile />`][userprofile-ref] component supports the addition of custom pages and use of external links in the navigation sidebar. 
 
 ## `<UserProfile.Page />`
 
-Custom pages can be rendered inside the `<UserProfile />` component and provide a way to incorporate app-specific settings or additional functionality.
+Custom pages can be rendered inside the [`<UserProfile />`][userprofile-ref] component and provide a way to incorporate app-specific settings or additional functionality.
 
-To add a custom page to the `<UserProfile />` component, use the `<UserProfile.Page />` component.
+To add a custom page to the [`<UserProfile />`][userprofile-ref] component, use the `<UserProfile.Page />` component.
 
 ### Usage
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
-    <Tab>
-        `<UserProfile.Page />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` flag must be added.
+  <Tab>
+    `<UserProfile.Page />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` flag must be added.
 
-        <CodeBlockTabs options={["App Router", "Pages Router"]}>
-            ```jsx filename="/app/user-profile/[[...user-profile]]/page.tsx"
-            "use client";
+    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+      ```jsx filename="/app/user-profile/[[...user-profile]]/page.tsx"
+      "use client";
 
-            import { UserProfile } from "@clerk/nextjs";
-            import { CustomProfilePage, CustomTerms } from "../components";
-            import { CustomIcon } from "../icons";
+      import { UserProfile } from "@clerk/nextjs";
+      import { CustomProfilePage, CustomTerms } from "../components";
+      import { CustomIcon } from "../icons";
 
-            const UserProfilePage = () => (
-                <UserProfile path="/user-profile" routing="path">
-                    <UserProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
-                        <CustomProfilePage />
-                    </UserProfile.Page>
-                    <UserProfile.Page label="Terms" labelIcon={<CustomIcon />} url="terms">
-                        <CustomTerms />
-                    </UserProfile.Page>
-                </UserProfile>
-            );
+      const UserProfilePage = () => (
+        <UserProfile path="/user-profile" routing="path">
+          <UserProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
+              <CustomProfilePage />
+          </UserProfile.Page>
+          <UserProfile.Page label="Terms" labelIcon={<CustomIcon />} url="terms">
+              <CustomTerms />
+          </UserProfile.Page>
+        </UserProfile>
+      );
 
-            export default UserProfilePage;
-            ```
+      export default UserProfilePage;
+      ```
 
-            ```jsx filename="/pages/user-profile/[[...index]].tsx"
-            import { UserProfile } from "@clerk/nextjs";
-            import { CustomProfilePage, CustomTerms } from "../components";
-            import { CustomIcon } from "../icons";
+      ```jsx filename="/pages/user-profile/[[...index]].tsx"
+      import { UserProfile } from "@clerk/nextjs";
+      import { CustomProfilePage, CustomTerms } from "../components";
+      import { CustomIcon } from "../icons";
 
-            const UserProfilePage = () => (
-                <UserProfile path="/user-profile" routing="path">
-                    <UserProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
-                        <CustomProfilePage />
-                    </UserProfile.Page>
-                    <UserProfile.Page label="Terms" labelIcon={<CustomIcon />} url="terms">
-                        <CustomTerms />
-                    </UserProfile.Page>
-                </UserProfile>
-            );
+      const UserProfilePage = () => (
+        <UserProfile path="/user-profile" routing="path">
+          <UserProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
+              <CustomProfilePage />
+          </UserProfile.Page>
+          <UserProfile.Page label="Terms" labelIcon={<CustomIcon />} url="terms">
+              <CustomTerms />
+          </UserProfile.Page>
+        </UserProfile>
+      );
 
-            export default UserProfilePage;
-            ```
-        </CodeBlockTabs>
-    </Tab>
+      export default UserProfilePage;
+      ```
+    </CodeBlockTabs>
+  </Tab>
 
-    <Tab>
-        ```jsx filename="/user-profile.tsx"
-        import { UserProfile } from "@clerk/clerk-react";
-        import { CustomProfilePage, CustomTerms } from "../components";
-        import { CustomIcon } from "../icons";
+  <Tab>
+      ```jsx filename="/user-profile.tsx"
+      import { UserProfile } from "@clerk/clerk-react";
+      import { CustomProfilePage, CustomTerms } from "../components";
+      import { CustomIcon } from "../icons";
 
-        const UserProfilePage = () => (
-            <UserProfile path="/user-profile" routing="path">
-                <UserProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
-                    <CustomProfilePage />
-                </UserProfile.Page>
-                <UserProfile.Page label="Terms" labelIcon={<CustomIcon />} url="terms">
-                    <CustomTerms />
-                </UserProfile.Page>
-            </UserProfile>
-        );
+      const UserProfilePage = () => (
+        <UserProfile path="/user-profile" routing="path">
+          <UserProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
+              <CustomProfilePage />
+          </UserProfile.Page>
+          <UserProfile.Page label="Terms" labelIcon={<CustomIcon />} url="terms">
+              <CustomTerms />
+          </UserProfile.Page>
+        </UserProfile>
+      );
 
-        export default UserProfilePage;
-        ```
-    </Tab>
+      export default UserProfilePage;
+      ```
+  </Tab>
 
-    <Tab>
-        ```tsx filename="routes/user/$.tsx"
-        import { UserProfile } from "@clerk/remix";
-        import { CustomProfilePage, CustomTerms } from "../components";
-        import { CustomIcon } from "../icons";
+  <Tab>
+    ```tsx filename="routes/user/$.tsx"
+    import { UserProfile } from "@clerk/remix";
+    import { CustomProfilePage, CustomTerms } from "../components";
+    import { CustomIcon } from "../icons";
 
-        export default function UserProfilePage() {
-            return (
-                <UserProfile path="/user-profile" routing="path">
-                    <UserProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
-                        <CustomProfilePage />
-                    </UserProfile.Page>
-                    <UserProfile.Page label="Terms" labelIcon={<CustomIcon />} url="terms">
-                        <CustomTerms />
-                    </UserProfile.Page>
-                </UserProfile>
-            );
-        }
-        ```
-    </Tab>
+    export default function UserProfilePage() {
+      return (
+        <UserProfile path="/user-profile" routing="path">
+          <UserProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
+              <CustomProfilePage />
+          </UserProfile.Page>
+          <UserProfile.Page label="Terms" labelIcon={<CustomIcon />} url="terms">
+              <CustomTerms />
+          </UserProfile.Page>
+        </UserProfile>
+      );
+    }
+    ```
+  </Tab>
 </Tabs>
 
 ### Props
@@ -116,79 +116,76 @@ All props below are required.
 | `url` | `string` | The path segment that will be used to navigate to the custom page. (e.g. if the `UserProfile` component is rendered at `/user`, then the custom page will be accessed at `/user/{url}` when using path routing) |
 | `children` | `React.ReactElement` | The components to be rendered as content inside the custom page. |
 
-
-
-
 ## `<UserProfile.Link />`
 
-You can add external links to the `<UserProfile />` navigation sidebar using the `<UserProfile.Link />` component.
+You can add external links to the [`<UserProfile />`][userprofile-ref] navigation sidebar using the `<UserProfile.Link />` component.
 
 ### Usage
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
-    <Tab>
-        `<UserProfile.Link />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` flag must be added.
+  <Tab>
+    `<UserProfile.Link />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` flag must be added.
 
-        <CodeBlockTabs options={["App Router", "Pages Router"]}>
-            ```jsx filename="/app/user-profile/[[...user-profile]]/page.tsx"
-            "use client";
+    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+      ```jsx filename="/app/user-profile/[[...user-profile]]/page.tsx"
+      "use client";
 
-            import { UserProfile } from "@clerk/nextjs";
-            import { CustomIcon } from "../icons";
+      import { UserProfile } from "@clerk/nextjs";
+      import { CustomIcon } from "../icons";
 
-            const UserProfilePage = () => (
-                <UserProfile path="/user-profile" routing="path">
-                    <UserProfile.Link label="Homepage" labelIcon={<CustomIcon />} url="/home" />
-                </UserProfile>
-            );
+      const UserProfilePage = () => (
+        <UserProfile path="/user-profile" routing="path">
+          <UserProfile.Link label="Homepage" labelIcon={<CustomIcon />} url="/home" />
+        </UserProfile>
+      );
 
-            export default UserProfilePage;
-            ```
+      export default UserProfilePage;
+      ```
 
-            ```jsx filename="/pages/user-profile/[[...index]].tsx"
-            import { UserProfile } from "@clerk/nextjs";
-            import { CustomIcon } from "../icons";
+      ```jsx filename="/pages/user-profile/[[...index]].tsx"
+      import { UserProfile } from "@clerk/nextjs";
+      import { CustomIcon } from "../icons";
 
-            const UserProfilePage = () => (
-                <UserProfile path="/user-profile" routing="path">
-                    <UserProfile.Link label="Homepage" labelIcon={<CustomIcon />} url="/home" />
-                </UserProfile>
-            );
+      const UserProfilePage = () => (
+        <UserProfile path="/user-profile" routing="path">
+          <UserProfile.Link label="Homepage" labelIcon={<CustomIcon />} url="/home" />
+        </UserProfile>
+      );
 
-            export default UserProfilePage;
-            ```
-        </CodeBlockTabs>
-    </Tab>
+      export default UserProfilePage;
+      ```
+    </CodeBlockTabs>
+  </Tab>
 
-    <Tab>
-        ```jsx filename="/user-profile.tsx"
-        import { UserProfile } from "@clerk/clerk-react";
-        import { CustomIcon } from "../icons";
+  <Tab>
+    ```jsx filename="/user-profile.tsx"
+    import { UserProfile } from "@clerk/clerk-react";
+    import { CustomIcon } from "../icons";
 
-        const UserProfilePage = () => (
-            <UserProfile path="/user-profile" routing="path">
-                <UserProfile.Link label="Homepage" labelIcon={<CustomIcon />} url="/home" />
-            </UserProfile>
-        );
+    const UserProfilePage = () => (
+      <UserProfile path="/user-profile" routing="path">
+        <UserProfile.Link label="Homepage" labelIcon={<CustomIcon />} url="/home" />
+      </UserProfile>
+    );
 
-        export default UserProfilePage;
-        ```
-    </Tab>
+    export default UserProfilePage;
+    ```
+  </Tab>
 
-    <Tab>
-        ```tsx filename="routes/user/$.tsx"
-        import { UserProfile } from "@clerk/remix";
-        import { CustomIcon } from "../icons";
+  <Tab>
+    ```tsx filename="routes/user/$.tsx"
+    import { UserProfile } from "@clerk/remix";
+    import { CustomIcon } from "../icons";
 
-        export default function UserProfilePage() {
-            return (
-                <UserProfile path="/user-profile" routing="path">
-                        <UserProfile.Link label="Homepage" labelIcon={<CustomIcon />} url="/home" />
-                </UserProfile>
-            );
-        }
-        ```
-    </Tab>
+    export default function UserProfilePage() {
+      return (
+        <UserProfile path="/user-profile" routing="path">
+          <UserProfile.Link label="Homepage" labelIcon={<CustomIcon />} url="/home" />
+        </UserProfile>
+      );
+    }
+    ```
+  </Tab>
 </Tabs>
 
 
@@ -212,93 +209,93 @@ If you want to reorder the default routes (`Account` and `Security`) in the `Use
 ### Usage
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
-    <Tab>
-        `<UserProfile.Page />` and `<UserProfile.Link />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` flag must be added.
+  <Tab>
+    `<UserProfile.Page />` and `<UserProfile.Link />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` flag must be added.
 
-        <CodeBlockTabs options={["App Router", "Pages Router"]}>
-            ```jsx filename="/app/user-profile/[[...user-profile]]/page.tsx"
-            "use client";
+    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+      ```jsx filename="/app/user-profile/[[...user-profile]]/page.tsx"
+      "use client";
 
-            import { UserProfile } from "@clerk/nextjs";
-            import { MyCustomPageContent } from "../components";
-            import { CustomIcon, Icon } from "../icons";
+      import { UserProfile } from "@clerk/nextjs";
+      import { MyCustomPageContent } from "../components";
+      import { CustomIcon, Icon } from "../icons";
 
-            const UserProfilePage = () => (
-                <UserProfile path="/user-profile" routing="path">
-                    <UserProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
-                        <MyCustomPageContent />
-                    </UserProfile.Page>
-                    <UserProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
-                    <UserProfile.Page label="account" />
-                    <UserProfile.Page label="security" />
-                </UserProfile>
-            );
+      const UserProfilePage = () => (
+        <UserProfile path="/user-profile" routing="path">
+          <UserProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
+              <MyCustomPageContent />
+          </UserProfile.Page>
+          <UserProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
+          <UserProfile.Page label="account" />
+          <UserProfile.Page label="security" />
+        </UserProfile>
+      );
 
-            export default UserProfilePage;
-            ```
+      export default UserProfilePage;
+      ```
 
-            ```jsx filename="/pages/user-profile/[[...index]].tsx"
-            import { UserProfile } from "@clerk/nextjs";
-            import { MyCustomPageContent } from "../components";
-            import { CustomIcon, Icon } from "../icons";
+      ```jsx filename="/pages/user-profile/[[...index]].tsx"
+      import { UserProfile } from "@clerk/nextjs";
+      import { MyCustomPageContent } from "../components";
+      import { CustomIcon, Icon } from "../icons";
 
-            const UserProfilePage = () => (
-                <UserProfile path="/user-profile" routing="path">
-                    <UserProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
-                        <MyCustomPageContent />
-                    </UserProfile.Page>
-                    <UserProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
-                    <UserProfile.Page label="account" />
-                    <UserProfile.Page label="security" />
-                </UserProfile>
-            );
+      const UserProfilePage = () => (
+        <UserProfile path="/user-profile" routing="path">
+          <UserProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
+              <MyCustomPageContent />
+          </UserProfile.Page>
+          <UserProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
+          <UserProfile.Page label="account" />
+          <UserProfile.Page label="security" />
+        </UserProfile>
+      );
 
-            export default UserProfilePage;
-            ```
-        </CodeBlockTabs>
-    </Tab>
+      export default UserProfilePage;
+      ```
+    </CodeBlockTabs>
+  </Tab>
 
-    <Tab>
-        ```jsx filename="/user-profile.tsx"
-        import { UserProfile } from "@clerk/clerk-react";
-        import { MyCustomPageContent } from "../components";
-        import { CustomIcon, Icon } from "../icons";
+  <Tab>
+      ```jsx filename="/user-profile.tsx"
+      import { UserProfile } from "@clerk/clerk-react";
+      import { MyCustomPageContent } from "../components";
+      import { CustomIcon, Icon } from "../icons";
 
-        const UserProfilePage = () => (
-            <UserProfile path="/user-profile" routing="path">
-                <UserProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
-                    <MyCustomPageContent />
-                </UserProfile.Page>
-                <UserProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
-                <UserProfile.Page label="account" />
-                <UserProfile.Page label="security" />
-            </UserProfile>
-        );
+      const UserProfilePage = () => (
+        <UserProfile path="/user-profile" routing="path">
+          <UserProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
+              <MyCustomPageContent />
+          </UserProfile.Page>
+          <UserProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
+          <UserProfile.Page label="account" />
+          <UserProfile.Page label="security" />
+        </UserProfile>
+      );
 
-        export default UserProfilePage;
-        ```
-    </Tab>
+      export default UserProfilePage;
+      ```
+  </Tab>
 
-    <Tab>
-        ```tsx filename="routes/user/$.tsx"
-        import { UserProfile } from "@clerk/remix";
-        import { MyCustomPageContent } from "../components";
-        import { CustomIcon, Icon } from "../icons";
+  <Tab>
+    ```tsx filename="routes/user/$.tsx"
+    import { UserProfile } from "@clerk/remix";
+    import { MyCustomPageContent } from "../components";
+    import { CustomIcon, Icon } from "../icons";
 
-        export default function UserProfilePage() {
-            return (
-                <UserProfile path="/user-profile" routing="path">
-                    <UserProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
-                        <MyCustomPageContent />
-                    </UserProfile.Page>
-                    <UserProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
-                    <UserProfile.Page label="account" />
-                    <UserProfile.Page label="security" />
-                </UserProfile>
-            );
-        }
-        ```
-    </Tab>
+    export default function UserProfilePage() {
+      return (
+        <UserProfile path="/user-profile" routing="path">
+          <UserProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
+              <MyCustomPageContent />
+          </UserProfile.Page>
+          <UserProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
+          <UserProfile.Page label="account" />
+          <UserProfile.Page label="security" />
+        </UserProfile>
+      );
+    }
+    ```
+  </Tab>
 </Tabs>
 
 The above example will result in the following order:
@@ -317,101 +314,103 @@ If you are using the `<UserButton />` component with the default props (where th
 ### Usage
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
-    <Tab>
-        `<UserButton.UserProfilePage />` and `<UserButton.UserProfileLink />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` flag must be added.
+  <Tab>
+    `<UserButton.UserProfilePage />` and `<UserButton.UserProfileLink />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` flag must be added.
 
-        <CodeBlockTabs options={["App Router", "Pages Router"]}>
-            ```jsx filename="/app/components/Header.tsx"
-            "use client";
+    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+      ```jsx filename="/app/components/Header.tsx"
+      "use client";
 
-            import { UserButton } from "@clerk/nextjs";
-            import { MyCustomPageContent } from "../components";
-            import { CustomIcon, Icon } from "../icons";
+      import { UserButton } from "@clerk/nextjs";
+      import { MyCustomPageContent } from "../components";
+      import { CustomIcon, Icon } from "../icons";
 
-            const Header = () => (
-                <header>
-                    <UserButton afterSignOutUrl='/'>
-                        <UserButton.UserProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
-                            <MyCustomPageContent />
-                        </UserButton.UserProfilePage>
-                        <UserButton.UserProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
-                        <UserButton.UserProfilePage label="account" />
-                        <UserButton.UserProfilePage label="security" />
-                    </UserButton>
-                </header>
-            );
+      const Header = () => (
+        <header>
+          <UserButton afterSignOutUrl='/'>
+            <UserButton.UserProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
+                <MyCustomPageContent />
+            </UserButton.UserProfilePage>
+            <UserButton.UserProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
+            <UserButton.UserProfilePage label="account" />
+            <UserButton.UserProfilePage label="security" />
+          </UserButton>
+        </header>
+      );
 
-            export default Header;
-            ```
+      export default Header;
+      ```
 
-            ```jsx filename="/pages/components/Header.tsx"
-            import { UserButton } from "@clerk/nextjs";
-            import { MyCustomPageContent } from "../components";
-            import { CustomIcon, Icon } from "../icons";
+      ```jsx filename="/pages/components/Header.tsx"
+      import { UserButton } from "@clerk/nextjs";
+      import { MyCustomPageContent } from "../components";
+      import { CustomIcon, Icon } from "../icons";
 
-            const Header = () => (
-                <header>
-                    <UserButton afterSignOutUrl='/'>
-                        <UserButton.UserProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
-                            <MyCustomPageContent />
-                        </UserButton.UserProfilePage>
-                        <UserButton.UserProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
-                        <UserButton.UserProfilePage label="account" />
-                        <UserButton.UserProfilePage label="security" />
-                    </UserButton>
-                </header>
-            );
+      const Header = () => (
+        <header>
+          <UserButton afterSignOutUrl='/'>
+            <UserButton.UserProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
+                <MyCustomPageContent />
+            </UserButton.UserProfilePage>
+            <UserButton.UserProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
+            <UserButton.UserProfilePage label="account" />
+            <UserButton.UserProfilePage label="security" />
+          </UserButton>
+        </header>
+      );
 
-            export default Header;
-            ```
-        </CodeBlockTabs>
-    </Tab>
+      export default Header;
+      ```
+    </CodeBlockTabs>
+</Tab>
 
-    <Tab>
-        ```jsx filename="/components/Header.tsx"
-        import { UserButton } from "@clerk/clerk-react";
-        import { MyCustomPageContent } from "../components";
-        import { CustomIcon, Icon } from "../icons";
+<Tab>
+    ```jsx filename="/components/Header.tsx"
+    import { UserButton } from "@clerk/clerk-react";
+    import { MyCustomPageContent } from "../components";
+    import { CustomIcon, Icon } from "../icons";
 
-        const Header = () => (
-            <header>
-                <UserButton afterSignOutUrl='/'>
-                    <UserButton.UserProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
-                        <MyCustomPageContent />
-                    </UserButton.UserProfilePage>
-                    <UserButton.UserProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
-                    <UserButton.UserProfilePage label="account" />
-                    <UserButton.UserProfilePage label="security" />
-                </UserButton>
-            </header>
-        );
+    const Header = () => (
+        <header>
+          <UserButton afterSignOutUrl='/'>
+            <UserButton.UserProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
+                <MyCustomPageContent />
+            </UserButton.UserProfilePage>
+            <UserButton.UserProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
+            <UserButton.UserProfilePage label="account" />
+            <UserButton.UserProfilePage label="security" />
+          </UserButton>
+        </header>
+    );
 
-        export default Header;
-        ```
-    </Tab>
+    export default Header;
+    ```
+</Tab>
 
-    <Tab>
-        ```tsx filename="components/Header.tsx"
-        import { UserButton } from "@clerk/remix";
-        import { MyCustomPageContent } from "../components";
-        import { CustomIcon, Icon } from "../icons";
+<Tab>
+    ```tsx filename="components/Header.tsx"
+    import { UserButton } from "@clerk/remix";
+    import { MyCustomPageContent } from "../components";
+    import { CustomIcon, Icon } from "../icons";
 
-        export default function Header() {
-        return (
-            <header>
-                <UserButton afterSignOutUrl='/'>
-                    <UserButton.UserProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
-                        <MyCustomPageContent />
-                    </UserButton.UserProfilePage>
-                    <UserButton.UserProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
-                    <UserButton.UserProfilePage label="account" />
-                    <UserButton.UserProfilePage label="security" />
-                </UserButton>
-            </header>
-            );
-        }
-        ```
-    </Tab>
+    export default function Header() {
+    return (
+      <header>
+        <UserButton afterSignOutUrl='/'>
+          <UserButton.UserProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
+              <MyCustomPageContent />
+          </UserButton.UserProfilePage>
+          <UserButton.UserProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
+          <UserButton.UserProfilePage label="account" />
+          <UserButton.UserProfilePage label="security" />
+        </UserButton>
+      </header>
+    );
+    }
+    ```
+  </Tab>
 </Tabs>
 
-This repetition of the same property can be avoided when the user is using the `userProfileMode='navigation'` and `userProfileUrl='<some url>'` props on the `<UserButton />` component and has implemented a dedicated page for the `<UserProfile />` component.
+This repetition of the same property can be avoided when the user is using the `userProfileMode='navigation'` and `userProfileUrl='<some url>'` props on the `<UserButton />` component and has implemented a dedicated page for the [`<UserProfile />`][userprofile-ref] component.
+
+[userprofile-ref]: /docs/components/user/user-profile
