--- a/docs/references/javascript/clerk/user-profile.mdx
+++ b/docs/references/javascript/clerk/user-profile.mdx
@@ -238,7 +238,7 @@ function closeUserProfile(): void;
 
 ## Custom Pages
 
-User profile can be customized by adding custom pages to it. Custom pages are added to the user profile using the `customPages` prop.
+You can add customized pages for the [`<UserProfile />`][userprofile-ref] component by using the `customPages` prop.
 
 <CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
     ```typescript {11}
