--- a/docs/components/customization/organization-profile.mdx
+++ b/docs/components/customization/organization-profile.mdx
@@ -5,104 +5,104 @@ description: Learn how to add custom pages and include external links within the
 
 # `<OrganizationProfile />` customization
 
-The `<OrganizationProfile />` component supports the addition of custom pages and use of external links in the navigation sidebar. 
+The [`<OrganizationProfile />`][orgprofile-ref] component supports the addition of custom pages and use of external links in the navigation sidebar. 
 
 ## `<OrganizationProfile.Page />`
 
-Custom pages can be rendered inside the `<OrganizationProfile />` component and provide a way to incorporate app-specific settings or additional functionality.
+Custom pages can be rendered inside the [`<OrganizationProfile />`][orgprofile-ref] component and provide a way to incorporate app-specific settings or additional functionality.
 
-To add a custom page to the `<OrganizationProfile />` component, use the `<OrganizationProfile.Page />` component.
+To add a custom page to the [`<OrganizationProfile />`][orgprofile-ref] component, use the `<OrganizationProfile.Page />` component.
 
 ### Usage
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
-    <Tab>
-        `<OrganizationProfile.Page />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` flag must be added.
+  <Tab>
+    `<OrganizationProfile.Page />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` flag must be added.
 
-        <CodeBlockTabs options={["App Router", "Pages Router"]}>
-            ```jsx filename="/app/organization-profile/[[...organization-profile]]/page.tsx"
-            "use client";
+    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+      ```jsx filename="/app/organization-profile/[[...organization-profile]]/page.tsx"
+      "use client";
 
-            import { OrganizationProfile } from "@clerk/nextjs";
-            import { CustomProfilePage, CustomTerms } from "../components";
-            import { CustomIcon } from "../icons";
+      import { OrganizationProfile } from "@clerk/nextjs";
+      import { CustomProfilePage, CustomTerms } from "../components";
+      import { CustomIcon } from "../icons";
 
-            const OrganizationProfilePage = () => (
-                <OrganizationProfile path="/organization-profile" routing="path">
-                    <OrganizationProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
-                        <CustomProfilePage />
-                    </OrganizationProfile.Page>
-                    <OrganizationProfile.Page label="Terms" labelIcon={<CustomIcon />} url="terms">
-                        <CustomTerms />
-                    </OrganizationProfile.Page>
-                </OrganizationProfile>
-            );
+      const OrganizationProfilePage = () => (
+        <OrganizationProfile path="/organization-profile" routing="path">
+          <OrganizationProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
+              <CustomProfilePage />
+          </OrganizationProfile.Page>
+          <OrganizationProfile.Page label="Terms" labelIcon={<CustomIcon />} url="terms">
+              <CustomTerms />
+          </OrganizationProfile.Page>
+        </OrganizationProfile>
+      );
 
-            export default OrganizationProfilePage;
-            ```
+      export default OrganizationProfilePage;
+      ```
 
-            ```jsx filename="/pages/organization-profile/[[...index]].tsx"
-            import { OrganizationProfile } from "@clerk/nextjs";
-            import { CustomProfilePage, CustomTerms } from "../components";
-            import { CustomIcon } from "../icons";
+      ```jsx filename="/pages/organization-profile/[[...index]].tsx"
+      import { OrganizationProfile } from "@clerk/nextjs";
+      import { CustomProfilePage, CustomTerms } from "../components";
+      import { CustomIcon } from "../icons";
 
-            const OrganizationProfilePage = () => (
-                <OrganizationProfile path="/organization-profile" routing="path">
-                    <OrganizationProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
-                        <CustomProfilePage />
-                    </OrganizationProfile.Page>
-                    <OrganizationProfile.Page label="Terms" labelIcon={<CustomIcon />} url="terms">
-                        <CustomTerms />
-                    </OrganizationProfile.Page>
-                </OrganizationProfile>
-            );
+      const OrganizationProfilePage = () => (
+        <OrganizationProfile path="/organization-profile" routing="path">
+          <OrganizationProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
+              <CustomProfilePage />
+          </OrganizationProfile.Page>
+          <OrganizationProfile.Page label="Terms" labelIcon={<CustomIcon />} url="terms">
+              <CustomTerms />
+          </OrganizationProfile.Page>
+        </OrganizationProfile>
+      );
 
-            export default OrganizationProfilePage;
-            ```
-        </CodeBlockTabs>
-    </Tab>
+      export default OrganizationProfilePage;
+      ```
+    </CodeBlockTabs>
+  </Tab>
 
-    <Tab>
-        ```jsx filename="/organization-profile.tsx"
-        import { OrganizationProfile } from "@clerk/clerk-react";
-        import { CustomProfilePage, CustomTerms } from "../components";
-        import { CustomIcon } from "../icons";
+  <Tab>
+    ```jsx filename="/organization-profile.tsx"
+    import { OrganizationProfile } from "@clerk/clerk-react";
+    import { CustomProfilePage, CustomTerms } from "../components";
+    import { CustomIcon } from "../icons";
 
-        const OrganizationProfilePage = () => (
-            <OrganizationProfile path="/organization-profile" routing="path">
-                <OrganizationProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
-                    <CustomProfilePage />
-                </OrganizationProfile.Page>
-                <OrganizationProfile.Page label="Terms" labelIcon={<CustomIcon />} url="terms">
-                    <CustomTerms />
-                </OrganizationProfile.Page>
-            </OrganizationProfile>
-        );
+    const OrganizationProfilePage = () => (
+      <OrganizationProfile path="/organization-profile" routing="path">
+        <OrganizationProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
+            <CustomProfilePage />
+        </OrganizationProfile.Page>
+        <OrganizationProfile.Page label="Terms" labelIcon={<CustomIcon />} url="terms">
+            <CustomTerms />
+        </OrganizationProfile.Page>
+      </OrganizationProfile>
+    );
 
-        export default OrganizationProfilePage;
-        ```
-    </Tab>
+    export default OrganizationProfilePage;
+    ```
+  </Tab>
 
-    <Tab>
-        ```tsx filename="routes/organization/$.tsx"
-        import { OrganizationProfile } from "@clerk/remix";
-        import { CustomProfilePage, CustomTerms } from "../components";
-        import { CustomIcon } from "../icons";
+  <Tab>
+    ```tsx filename="routes/organization/$.tsx"
+    import { OrganizationProfile } from "@clerk/remix";
+    import { CustomProfilePage, CustomTerms } from "../components";
+    import { CustomIcon } from "../icons";
 
-        export default function OrganizationProfilePage() {
-        return (
-            <OrganizationProfile path="/organization-profile" routing="path">
-                <OrganizationProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
-                    <CustomProfilePage />
-                </OrganizationProfile.Page>
-                <OrganizationProfile.Page label="Terms" labelIcon={<CustomIcon />} url="terms">
-                    <CustomTerms />
-                </OrganizationProfile.Page>
-            </OrganizationProfile>
-            );
-        }
-        ```
-    </Tab>
+    export default function OrganizationProfilePage() {
+    return (
+      <OrganizationProfile path="/organization-profile" routing="path">
+        <OrganizationProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
+            <CustomProfilePage />
+        </OrganizationProfile.Page>
+        <OrganizationProfile.Page label="Terms" labelIcon={<CustomIcon />} url="terms">
+            <CustomTerms />
+        </OrganizationProfile.Page>
+      </OrganizationProfile>
+    );
+    }
+    ```
+  </Tab>
 </Tabs>
 
 ### Props
@@ -116,79 +116,76 @@ All props below are required.
 | `url` | `string` | The path segment that will be used to navigate to the custom page. (e.g. if the `OrganizationProfile` component is rendered at `/organization`, then the custom page will be accessed at `/organization/{url}` when using path routing). |
 | `children` | `React.ReactElement` | The components to be rendered as content inside the custom page. |
 
-
-
-
 ## `<OrganizationProfile.Link />`
 
-You can add external links to the `<OrganizationProfile />` navigation sidebar using the `<OrganizationProfile.Link />` component.
+You can add external links to the [`<OrganizationProfile />`][orgprofile-ref] navigation sidebar using the `<OrganizationProfile.Link />` component.
 
 ### Usage
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
-    <Tab>
-        `<OrganizationProfile.Link />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` flag must be added.
+  <Tab>
+    `<OrganizationProfile.Link />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` flag must be added.
 
-        <CodeBlockTabs options={["App Router", "Pages Router"]}>
-            ```jsx filename="/app/organization-profile/[[...organization-profile]]/page.tsx"
-            "use client";
+    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+      ```jsx filename="/app/organization-profile/[[...organization-profile]]/page.tsx"
+      "use client";
 
-            import { OrganizationProfile } from "@clerk/nextjs";
-            import { CustomIcon } from "../icons";
+      import { OrganizationProfile } from "@clerk/nextjs";
+      import { CustomIcon } from "../icons";
 
-            const OrganizationProfilePage = () => (
-                <OrganizationProfile path="/organization-profile" routing="path">
-                    <OrganizationProfile.Link label="Homepage" labelIcon={<CustomIcon />} url="/home" />
-                </OrganizationProfile>
-            );
+      const OrganizationProfilePage = () => (
+        <OrganizationProfile path="/organization-profile" routing="path">
+          <OrganizationProfile.Link label="Homepage" labelIcon={<CustomIcon />} url="/home" />
+        </OrganizationProfile>
+      );
 
-            export default OrganizationProfilePage;
-            ```
+      export default OrganizationProfilePage;
+      ```
 
-            ```jsx filename="/pages/organization-profile/[[...index]].tsx"
-            import { OrganizationProfile } from "@clerk/nextjs";
-            import { CustomIcon } from "../icons";
+      ```jsx filename="/pages/organization-profile/[[...index]].tsx"
+      import { OrganizationProfile } from "@clerk/nextjs";
+      import { CustomIcon } from "../icons";
 
-            const OrganizationProfilePage = () => (
-                <OrganizationProfile path="/organization-profile" routing="path">
-                    <OrganizationProfile.Link label="Homepage" labelIcon={<CustomIcon />} url="/home" />
-                </OrganizationProfile>
-            );
+      const OrganizationProfilePage = () => (
+        <OrganizationProfile path="/organization-profile" routing="path">
+          <OrganizationProfile.Link label="Homepage" labelIcon={<CustomIcon />} url="/home" />
+        </OrganizationProfile>
+      );
 
-            export default OrganizationProfilePage;
-            ```
-        </CodeBlockTabs>
-    </Tab>
+      export default OrganizationProfilePage;
+      ```
+    </CodeBlockTabs>
+  </Tab>
 
-    <Tab>
-        ```jsx filename="/organization-profile.tsx"
-        import { OrganizationProfile } from "@clerk/clerk-react";
-        import { CustomIcon } from "../icons";
+  <Tab>
+    ```jsx filename="/organization-profile.tsx"
+    import { OrganizationProfile } from "@clerk/clerk-react";
+    import { CustomIcon } from "../icons";
 
-        const OrganizationProfilePage = () => (
-            <OrganizationProfile path="/organization-profile" routing="path">
-                <OrganizationProfile.Link label="Homepage" labelIcon={<CustomIcon />} url="/home" />
-            </OrganizationProfile>
-        );
+    const OrganizationProfilePage = () => (
+      <OrganizationProfile path="/organization-profile" routing="path">
+        <OrganizationProfile.Link label="Homepage" labelIcon={<CustomIcon />} url="/home" />
+      </OrganizationProfile>
+    );
 
-        export default OrganizationProfilePage;
-        ```
-    </Tab>
+    export default OrganizationProfilePage;
+    ```
+  </Tab>
 
-    <Tab>
-        ```tsx filename="routes/organization/$.tsx"
-        import { OrganizationProfile } from "@clerk/remix";
-        import { CustomIcon } from "../icons";
+  <Tab>
+    ```tsx filename="routes/organization/$.tsx"
+    import { OrganizationProfile } from "@clerk/remix";
+    import { CustomIcon } from "../icons";
 
-        export default function OrganizationProfilePage() {
-        return (
-            <OrganizationProfile path="/organization-profile" routing="path">
-                <OrganizationProfile.Link label="Homepage" labelIcon={<CustomIcon />} url="/home" />
-            </OrganizationProfile>
-            );
-        }
-        ```
-    </Tab>
+    export default function OrganizationProfilePage() {
+    return (
+      <OrganizationProfile path="/organization-profile" routing="path">
+        <OrganizationProfile.Link label="Homepage" labelIcon={<CustomIcon />} url="/home" />
+      </OrganizationProfile>
+    );
+    }
+    ```
+  </Tab>
 </Tabs>
 
 
@@ -212,93 +209,93 @@ If you want to reorder the default routes (`Members` and `Settings`) in the `Org
 ### Usage
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
-    <Tab>
-        `<OrganizationProfile.Page />` and `<OrganizationProfile.Link />` can be rendered **only on the client**.  For Next.js applications that use App Router, the `"use client";` flag needs to be used.
+  <Tab>
+    `<OrganizationProfile.Page />` and `<OrganizationProfile.Link />` can be rendered **only on the client**.  For Next.js applications that use App Router, the `"use client";` flag needs to be used.
 
-        <CodeBlockTabs options={["App Router", "Pages Router"]}>
-            ```jsx filename="/app/organization-profile/[[...organization-profile]]/page.tsx"
-            "use client";
+    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+      ```jsx filename="/app/organization-profile/[[...organization-profile]]/page.tsx"
+      "use client";
 
-            import { OrganizationProfile } from "@clerk/nextjs";
-            import { MyCustomPageContent } from "../components";
-            import { CustomIcon, Icon } from "../icons";
+      import { OrganizationProfile } from "@clerk/nextjs";
+      import { MyCustomPageContent } from "../components";
+      import { CustomIcon, Icon } from "../icons";
 
-            const OrganizationProfilePage = () => (
-                <OrganizationProfile path="/organization-profile" routing="path">
-                    <OrganizationProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
-                        <MyCustomPageContent />
-                    </OrganizationProfile.Page>
-                    <OrganizationProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
-                    <OrganizationProfile.Page label="members" />
-                    <OrganizationProfile.Page label="settings" />
-                </OrganizationProfile>
-            );
+      const OrganizationProfilePage = () => (
+        <OrganizationProfile path="/organization-profile" routing="path">
+          <OrganizationProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
+              <MyCustomPageContent />
+          </OrganizationProfile.Page>
+          <OrganizationProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
+          <OrganizationProfile.Page label="members" />
+          <OrganizationProfile.Page label="settings" />
+        </OrganizationProfile>
+      );
 
-            export default OrganizationProfilePage;
-            ```
+      export default OrganizationProfilePage;
+      ```
 
-            ```jsx filename="/pages/organization-profile/[[...index]].tsx"
-            import { OrganizationProfile } from "@clerk/nextjs";
-            import { MyCustomPageContent } from "../components";
-            import { CustomIcon, Icon } from "../icons";
+      ```jsx filename="/pages/organization-profile/[[...index]].tsx"
+      import { OrganizationProfile } from "@clerk/nextjs";
+      import { MyCustomPageContent } from "../components";
+      import { CustomIcon, Icon } from "../icons";
 
-            const OrganizationProfilePage = () => (
-                <OrganizationProfile path="/organization-profile" routing="path">
-                    <OrganizationProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
-                        <MyCustomPageContent />
-                    </OrganizationProfile.Page>
-                    <OrganizationProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
-                    <OrganizationProfile.Page label="members" />
-                    <OrganizationProfile.Page label="settings" />
-                </OrganizationProfile>
-            );
+      const OrganizationProfilePage = () => (
+        <OrganizationProfile path="/organization-profile" routing="path">
+          <OrganizationProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
+              <MyCustomPageContent />
+          </OrganizationProfile.Page>
+          <OrganizationProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
+          <OrganizationProfile.Page label="members" />
+          <OrganizationProfile.Page label="settings" />
+        </OrganizationProfile>
+      );
 
-            export default OrganizationProfilePage;
-            ```
-        </CodeBlockTabs>
-    </Tab>
+      export default OrganizationProfilePage;
+      ```
+    </CodeBlockTabs>
+  </Tab>
 
-    <Tab>
-        ```jsx filename="/organization-profile.tsx"
-        import { OrganizationProfile } from "@clerk/clerk-react";
-        import { MyCustomPageContent } from "../components";
-        import { CustomIcon, Icon } from "../icons";
+  <Tab>
+    ```jsx filename="/organization-profile.tsx"
+    import { OrganizationProfile } from "@clerk/clerk-react";
+    import { MyCustomPageContent } from "../components";
+    import { CustomIcon, Icon } from "../icons";
 
-        const OrganizationProfilePage = () => (
-            <OrganizationProfile path="/organization-profile" routing="path">
-                <OrganizationProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
-                    <MyCustomPageContent />
-                </OrganizationProfile.Page>
-                <OrganizationProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
-                <OrganizationProfile.Page label="members" />
-                <OrganizationProfile.Page label="settings" />
-            </OrganizationProfile>
-        );
+    const OrganizationProfilePage = () => (
+      <OrganizationProfile path="/organization-profile" routing="path">
+        <OrganizationProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
+            <MyCustomPageContent />
+        </OrganizationProfile.Page>
+        <OrganizationProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
+        <OrganizationProfile.Page label="members" />
+        <OrganizationProfile.Page label="settings" />
+      </OrganizationProfile>
+    );
 
-        export default OrganizationProfilePage;
-        ```
-    </Tab>
+    export default OrganizationProfilePage;
+    ```
+  </Tab>
 
-    <Tab>
-        ```tsx filename="routes/organization/$.tsx"
-        import { OrganizationProfile } from "@clerk/remix";
-        import { MyCustomPageContent } from "../components";
-        import { CustomIcon, Icon } from "../icons";
+  <Tab>
+    ```tsx filename="routes/organization/$.tsx"
+    import { OrganizationProfile } from "@clerk/remix";
+    import { MyCustomPageContent } from "../components";
+    import { CustomIcon, Icon } from "../icons";
 
-        export default function OrganizationProfilePage() {
-        return (
-            <OrganizationProfile path="/organization-profile" routing="path">
-                <OrganizationProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
-                    <MyCustomPageContent />
-                </OrganizationProfile.Page>
-                <OrganizationProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
-                <OrganizationProfile.Page label="members" />
-                <OrganizationProfile.Page label="settings" />
-            </OrganizationProfile>
-            );
-        }
-        ```
-    </Tab>
+    export default function OrganizationProfilePage() {
+    return (
+      <OrganizationProfile path="/organization-profile" routing="path">
+        <OrganizationProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
+            <MyCustomPageContent />
+        </OrganizationProfile.Page>
+        <OrganizationProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
+        <OrganizationProfile.Page label="members" />
+        <OrganizationProfile.Page label="settings" />
+      </OrganizationProfile>
+    );
+    }
+    ```
+  </Tab>
 </Tabs>
 
 The above example will result in the following order:
@@ -317,101 +314,103 @@ If you are using the `<OrganizationSwitcher />` component with the default props
 ### Usage
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
-    <Tab>
-        `<OrganizationSwitcher.OrganizationProfilePage />` and `<OrganizationSwitcher.OrganizationProfileLink />` can be rendered **only on the client**.  For Next.js applications using App Router, the `"use client";` flag must be added.
+  <Tab>
+    `<OrganizationSwitcher.OrganizationProfilePage />` and `<OrganizationSwitcher.OrganizationProfileLink />` can be rendered **only on the client**.  For Next.js applications using App Router, the `"use client";` flag must be added.
 
-        <CodeBlockTabs options={["App Router", "Pages Router"]}>
-            ```jsx filename="/app/components/Header.tsx"
-            "use client";
+    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+      ```jsx filename="/app/components/Header.tsx"
+      "use client";
 
-            import { OrganizationSwitcher } from "@clerk/nextjs";
-            import { MyCustomPageContent } from "../components";
-            import { CustomIcon, Icon } from "../icons";
+      import { OrganizationSwitcher } from "@clerk/nextjs";
+      import { MyCustomPageContent } from "../components";
+      import { CustomIcon, Icon } from "../icons";
 
-            const Header = () => (
-                <header>
-                    <OrganizationSwitcher afterSignOutUrl='/'>
-                        <OrganizationSwitcher.OrganizationProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
-                            <MyCustomPageContent />
-                        </OrganizationSwitcher.OrganizationProfilePage>
-                        <OrganizationSwitcher.OrganizationProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
-                        <OrganizationSwitcher.OrganizationProfilePage label="members" />
-                        <OrganizationSwitcher.OrganizationProfilePage label="settings" />
-                    </OrganizationSwitcher>
-                </header>
-            );
+      const Header = () => (
+        <header>
+          <OrganizationSwitcher afterSignOutUrl='/'>
+            <OrganizationSwitcher.OrganizationProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
+                <MyCustomPageContent />
+            </OrganizationSwitcher.OrganizationProfilePage>
+            <OrganizationSwitcher.OrganizationProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
+            <OrganizationSwitcher.OrganizationProfilePage label="members" />
+            <OrganizationSwitcher.OrganizationProfilePage label="settings" />
+          </OrganizationSwitcher>
+        </header>
+      );
 
-            export default Header;
-            ```
+      export default Header;
+      ```
 
-            ```jsx filename="/pages/components/Header.tsx"
-            import { OrganizationSwitcher } from "@clerk/nextjs";
-            import { MyCustomPageContent } from "../components";
-            import { CustomIcon, Icon } from "../icons";
+      ```jsx filename="/pages/components/Header.tsx"
+      import { OrganizationSwitcher } from "@clerk/nextjs";
+      import { MyCustomPageContent } from "../components";
+      import { CustomIcon, Icon } from "../icons";
 
-            const Header = () => (
-                <header>
-                    <OrganizationSwitcher afterSignOutUrl='/'>
-                        <OrganizationSwitcher.OrganizationProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
-                            <MyCustomPageContent />
-                        </OrganizationSwitcher.OrganizationProfilePage>
-                        <OrganizationSwitcher.OrganizationProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
-                        <OrganizationSwitcher.OrganizationProfilePage label="members" />
-                        <OrganizationSwitcher.OrganizationProfilePage label="settings" />
-                    </OrganizationSwitcher>
-                </header>
-            );
+      const Header = () => (
+        <header>
+          <OrganizationSwitcher afterSignOutUrl='/'>
+            <OrganizationSwitcher.OrganizationProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
+                <MyCustomPageContent />
+            </OrganizationSwitcher.OrganizationProfilePage>
+            <OrganizationSwitcher.OrganizationProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
+            <OrganizationSwitcher.OrganizationProfilePage label="members" />
+            <OrganizationSwitcher.OrganizationProfilePage label="settings" />
+          </OrganizationSwitcher>
+        </header>
+      );
 
-            export default Header;
-            ```
-        </CodeBlockTabs>
-    </Tab>
+      export default Header;
+      ```
+    </CodeBlockTabs>
+  </Tab>
 
-    <Tab>
-        ```jsx filename="/components/Header.tsx"
-        import { OrganizationSwitcher } from "@clerk/clerk-react";
-        import { MyCustomPageContent } from "../components";
-        import { CustomIcon, Icon } from "../icons";
+  <Tab>
+      ```jsx filename="/components/Header.tsx"
+      import { OrganizationSwitcher } from "@clerk/clerk-react";
+      import { MyCustomPageContent } from "../components";
+      import { CustomIcon, Icon } from "../icons";
 
-        const Header = () => (
-            <header>
-                <OrganizationSwitcher afterSignOutUrl='/'>
-                    <OrganizationSwitcher.OrganizationProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
-                        <MyCustomPageContent />
-                    </OrganizationSwitcher.OrganizationProfilePage>
-                    <OrganizationSwitcher.OrganizationProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
-                    <OrganizationSwitcher.OrganizationProfilePage label="members" />
-                    <OrganizationSwitcher.OrganizationProfilePage label="settings" />
-                </OrganizationSwitcher>
-            </header>
-        );
+      const Header = () => (
+        <header>
+          <OrganizationSwitcher afterSignOutUrl='/'>
+            <OrganizationSwitcher.OrganizationProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
+                <MyCustomPageContent />
+            </OrganizationSwitcher.OrganizationProfilePage>
+            <OrganizationSwitcher.OrganizationProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
+            <OrganizationSwitcher.OrganizationProfilePage label="members" />
+            <OrganizationSwitcher.OrganizationProfilePage label="settings" />
+          </OrganizationSwitcher>
+        </header>
+      );
 
-        export default Header;
-        ```
-    </Tab>
+      export default Header;
+      ```
+  </Tab>
 
-    <Tab>
-        ```tsx filename="components/Header.tsx"
-        import { OrganizationSwitcher } from "@clerk/remix";
-        import { MyCustomPageContent } from "../components";
-        import { CustomIcon, Icon } from "../icons";
+  <Tab>
+      ```tsx filename="components/Header.tsx"
+      import { OrganizationSwitcher } from "@clerk/remix";
+      import { MyCustomPageContent } from "../components";
+      import { CustomIcon, Icon } from "../icons";
 
-        export default function Header() {
-        return (
-            <header>
-                <OrganizationSwitcher afterSignOutUrl='/'>
-                    <OrganizationSwitcher.OrganizationProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
-                        <MyCustomPageContent />
-                    </OrganizationSwitcher.OrganizationProfilePage>
-                    <OrganizationSwitcher.OrganizationProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
-                    <OrganizationSwitcher.OrganizationProfilePage label="members" />
-                    <OrganizationSwitcher.OrganizationProfilePage label="settings" />
-                </OrganizationSwitcher>
-            </header>
-            );
-        }
-        ```
-    </Tab>
+      export default function Header() {
+      return (
+        <header>
+          <OrganizationSwitcher afterSignOutUrl='/'>
+            <OrganizationSwitcher.OrganizationProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
+                <MyCustomPageContent />
+            </OrganizationSwitcher.OrganizationProfilePage>
+            <OrganizationSwitcher.OrganizationProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
+            <OrganizationSwitcher.OrganizationProfilePage label="members" />
+            <OrganizationSwitcher.OrganizationProfilePage label="settings" />
+          </OrganizationSwitcher>
+        </header>
+          );
+      }
+      ```
+  </Tab>
 </Tabs>
 
-This repetition of the same property can be avoided when the user is using the `organizationProfileMode='navigation'` and `organizationProfileUrl='<some url>'` props on the `<OrganizationSwitcher />` component and has implemented a dedicated page for the `<OrganizationProfile />` component.
+This repetition of the same property can be avoided when the user is using the `organizationProfileMode='navigation'` and `organizationProfileUrl='<some url>'` props on the `<OrganizationSwitcher />` component and has implemented a dedicated page for the [`<OrganizationProfile />`][orgprofile-ref] component.
+
+[orgprofile-ref]: /docs/components/organization/organization-profile
