--- a/docs/references/javascript/types/custom-page.mdx
+++ b/docs/references/javascript/types/custom-page.mdx
@@ -1,11 +1,11 @@
 ---
 title: CustomPage
-description: Custom page for UserProfile or OrganizationProfile
+description: An interface that provides the ability to add custom pages to the <UserProfile /> or <OrganizationProfile /> components.
 ---
 
 # `CustomPage`
 
-Custom page for `UserProfile` or `OrganizationProfile`.
+An interface that provides the ability to add custom pages to the [`<UserProfile />`][userprofile-ref] or [orgprofile-ref] components.
 
 ## Attributes
 
@@ -17,3 +17,6 @@ Custom page for `UserProfile` or `OrganizationProfile`.
 | `unmountIcon` | `((el?: HTMLDivElement) => void) \| undefined` | This function is called to unmount the icon of the label. The `el` argument is the same element that was passed to the `mountIcon` function. |
 | `mount` | `((el: HTMLDivElement) => void) \| undefined` | This function is called to mount the content of the custom page. The `el` argument is the element where the content should be mounted. |
 | `unmount` | `((el?: HTMLDivElement) => void) \| undefined` | This function is called to unmount the content of the custom page. The `el` argument is the same element that was passed to the `mount` function. |
+
+[userprofile-ref]: /docs/components/user/user-profile
+[orgprofile-ref]: /docs/components/organization/organization-profile
