--- a/docs/advanced-usage/using-proxies.mdx
+++ b/docs/advanced-usage/using-proxies.mdx
@@ -7,7 +7,7 @@ description: Learn how to proxy the Clerk Frontend API through your domain.
 
 Clerk supports two configuration methods for connecting to the Clerk Frontend API: CNAME and Proxy.
 
-[Setting up CNAME records and using DNS is the simplest way](/docs/deployments/overview#dns-records). However, if you're unable to use this approach, or would like more control over your integration with Clerk, you can use a proxy.
+The recommended way to connect to the Clerk Frontend API is to [set up CNAME records and use DNS](/docs/deployments/overview). However, if you're unable to use this approach, or would like more control over your integration with Clerk, you can use a proxy.
 
 When using a proxy, all requests to the Frontend API will be made through your domain. This allows you to use your own SSL certificate, and gives you more control over how you configure your application.
 
@@ -16,11 +16,15 @@ When using a proxy, all requests to the Frontend API will be made through your d
 <Steps>
 ### Create your application and install Clerk
 
-To get started, you need to create an Application from the [Clerk Dashboard](https://dashboard.clerk.com/). Once you create an instance via the Clerk Dashboard, you will be prompted to choose a domain. For the purposes of this guide, the domain will be `app.dev`.
+To get started, you need to create an application from the [Clerk Dashboard](https://dashboard.clerk.com/). Once you create an instance via the Clerk Dashboard, you will be prompted to choose a domain. For the purposes of this guide, the domain will be `app.dev`.
+
+<Callout type="info">
+  For more information on creating a Clerk application, check out our [Set up your application guide](/docs/quickstarts/setup-clerk).
+</Callout>
 
 ### Configure your proxy server
 
-For this example, we've chosen `/__clerk` as the path for our proxy. Your proxy server must be on the same domain as your application.
+For this example, `/__clerk` is used as the path for the proxy. Your proxy server must be on the same domain as your application.
 
 You can choose any path you'd like, but it must be unique and not conflict with any other routes in your application.
 
@@ -101,11 +105,13 @@ Requests to `https://app.dev/__clerk/*` must be forwarded to `https://frontend-a
   </Tab>
 </Tabs>
 
-<Callout type="info">Every proxy configuration will be different and we're here to help. Please reach out if there's a specific use-case you're looking to solve.</Callout>
+<Callout type="info">
+  Every proxy configuration will be different and we're here to help. Please [reach out](https://clerk.com/support) if there's a specific use-case you're looking to solve.
+</Callout>
 
 ### Enable Proxying
 
-In order to enable proxying, you need to set a proxy URL for your Clerk instance's domain.
+In order to enable proxying, you need to set a proxy URL for your Clerk instance's domain. This can be done through the Clerk Dashboard or through the Backend API.
 
 <Callout type="info">
   To avoid downtime, your proxy must be set up according to the above configuration before it can be enabled for your instance.
@@ -114,7 +120,7 @@ In order to enable proxying, you need to set a proxy URL for your Clerk instance
 
 <Tabs items={['Dashboard', 'Backend API']}>
   <Tab>
-    1. Go to [your Clerk dashboard](https://dashboard.clerk.com/) and navigate to the **Domains** page.
+    1. Navigate to the [Domains](https://dashboard.clerk.com/last-active?path=domains) page in the Clerk Dashboard.
     2. Navigate to the **Frontend API** section.
     3. Click on **Advanced**.
     4. Enter your proxy URL in the **Proxy URL** field. The proxy URL must be a valid URL and resolve correctly.
@@ -134,6 +140,7 @@ In order to enable proxying, you need to set a proxy URL for your Clerk instance
 
 ### Configure your proxy setup
 
+You can configure your proxy setup via environment variables or via properties.
 
 <Tabs items={['Environment Variables', 'Properties']}>
   <Tab>
