Updated code to resolve type error

--- a/docs/custom-flows/email-sms-otp.mdx
+++ b/docs/custom-flows/email-sms-otp.mdx
@@ -248,9 +248,12 @@ export default function Page() {
       });
 
       // Filter the returned array to find the 'phone_code' entry
-      const phoneCodeFactor = supportedFirstFactors.find(factor => {
-        return factor.strategy === 'phone_code'
-      })
+      const isPhoneCodeFactor = (
+        factor: SignInFirstFactor
+      ): factor is PhoneCodeFactor => {
+        return factor.strategy === "phone_code";
+      };
+      const phoneCodeFactor = supportedFirstFactors?.find(isPhoneCodeFactor);
 
       if (phoneCodeFactor) {
         // Grab the phoneNumberId
