Added link and updated example

--- a/docs/custom-flows/sign-out.mdx
+++ b/docs/custom-flows/sign-out.mdx
@@ -74,17 +74,20 @@ const Header = () => {
 
 ## Custom sign-out
 
-In case the pre-built user button doesn't cover your needs and you prefer a custom sign-out flow, you can easily make use of our SDKs.
+If the pre-built user button doesn't cover your needs you can use the [`signOut()`](/docs/references/javascript/clerk/clerk#sign-out) function to build a custom solution.
 
 <CodeBlockTabs options={["React", "JavaScript"]}>
 ```jsx
 import { useClerk } from "@clerk/clerk-react";
+import { useRouter } from 'next/navigation'
 
 const SignOutButton = () => {
   const { signOut } = useClerk();
+  const router = useRouter()
 
   return (
     <button onClick={() => signOut()} >
+    <button onClick={() => signOut(() => router.push("/"))}>
       Sign out
     </button>
   );
