--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -285,7 +285,8 @@ The [`currentUser()`][currentuser-ref] helper will return the [`User`][user-obje
   <Tab>
       Clerk has introduced new [`auth()`](/docs/references/nextjs/auth) and [`currentUser()`](/docs/references/nextjs/current-user) helpers for use in server components and server actions. The `auth()` helper returns the [`Authentication` Object](/docs/references/nextjs/authentication-object) status of the user. The `currentUser()` helper loads the [`User`][user-object] object for the authenticated user. This is helpful if you want to render information, like their first and last name, directly from the server.
 
-    Under the hood, `currentUser()` uses the `clerkClient` wrapper to make a call to Clerk's Backend API. This does count towards the [Backend API Request Rate Limit](/docs/backend-requests/resources/rate-limits#rate-limits). This also uses `fetch()` so it is automatically deduped per request.
+    Under the hood, `currentUser()` uses the [`clerkClient`](/docs/references/backend/overview) wrapper to make a call to Clerk's Backend API. This does count towards the [Backend API Request Rate Limit](/docs/backend-requests/resources/rate-limits#rate-limits). This also uses `fetch()` so it is automatically deduped per request.
+
 
     ```tsx filename="app/page.tsx"
     import { auth, currentUser } from "@clerk/nextjs";
