--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -472,3 +472,5 @@ Now that your Next.js application is integrated with Clerk, you will want to rea
 [user-object]: /docs/references/javascript/user/user
 [auth-ref]: /docs/references/nextjs/auth
 [currentuser-ref]: /docs/references/nextjs/current-user
+[get-auth]: /docs/references/nextjs/get-auth
+[clerk-client]: /docs/references/backend/overview
