--- a/docs/custom-flows/sign-out.mdx
+++ b/docs/custom-flows/sign-out.mdx
@@ -74,7 +74,7 @@ const Header = () => {
 
 ## Custom sign-out
 
-If the pre-built user button doesn't cover your needs you can use the [`signOut()`](/docs/references/javascript/clerk/clerk#sign-out) function to build a custom solution.
+If the pre-built [`<UserButton />`][user-button] doesn't cover your needs, you can use the [`signOut()`](/docs/references/javascript/clerk/clerk#sign-out) function to build a custom solution.
 
 <CodeBlockTabs options={["React", "JavaScript"]}>
 ```jsx
