--- a/docs/custom-flows/sign-out.mdx
+++ b/docs/custom-flows/sign-out.mdx
@@ -99,3 +99,5 @@ const SignOutButton = () => {
 await window.Clerk.signOut();
 ```
 </CodeBlockTabs>
+
+[user-button]: /docs/components/user/user-button
