update all link instances for user button reference

--- a/docs/custom-flows/sign-out.mdx
+++ b/docs/custom-flows/sign-out.mdx
@@ -18,7 +18,7 @@ You can either sign out users in Clerk by utilizing [Clerk Components](/docs/com
 
 ## Using Clerk Components
 
-The simplest way to sign out users is via the [`<UserButton />`](/docs/components/user/user-button) component. The user button is a pre-built UI component that gives a signed-in user a way to manage their account. One of the options is a **Sign out** button.
+The simplest way to sign out users is via the [`<UserButton />`][user-button] component. The [`<UserButton />`][user-button] is a pre-built UI component that gives a signed-in user a way to manage their account. One of the options is a **Sign out** button.
 
 <Images
   width={880}
@@ -27,7 +27,7 @@ The simplest way to sign out users is via the [`<UserButton />`](/docs/component
   alt="The User Button component with the 'Sign out' option hovered over."
 />
 
-In an application with [multisession](/docs/custom-flows/multi-session-applications) enabled and with more than one account signed in, the [`<UserButton />`](/docs/components/user/user-button) component will also display a **Sign out of all accounts** option. 
+In an application with [multisession](/docs/custom-flows/multi-session-applications) enabled and with more than one account signed in, the [`<UserButton />`][user-button] component will also display a **Sign out of all accounts** option. 
 
 <Images
   width={880}
