clarify on values accepted by azp & authorizedParties

--- a/docs/backend-requests/handling/manual-jwt.mdx
+++ b/docs/backend-requests/handling/manual-jwt.mdx
@@ -5,7 +5,7 @@ description: Learn how to manually verify Clerk-generated session tokens (JWTs).
 
 # Manual JWT Verification
 
-Your Clerk-generated session tokens are essentially JWTs which are signed using your instance's private key and can be verified using your instance's public key. Depending on your architecture, these tokens will be in your backend requests either via a cookie named `__session` or via the Authorization header.
+Your Clerk-generated [session tokens](/docs/backend-requests/resources/session-tokens) are essentially JWTs which are signed using your instance's private key and can be verified using your instance's public key. Depending on your architecture, these tokens will be in your backend requests either via a cookie named `__session` or via the Authorization header.
 
 For every request, you must validate its token to make sure it hasn't expired and it is authentic (i.e. no malicious user tried to tamper with it). If these validations pass, then it means that the user is authenticated to your application and you should consider them signed in.
 
@@ -36,9 +36,9 @@ alt="The 'API Keys' page in the Clerk Dashboard. There is a red box around the '
 
 To verify the token signature, you should:
 
-1. Use the above Public Key to verify the token's signature
-2. Validate that the token is not expired, by checking the `exp` and `nbf` claims
-3. If the `azp` claim exists, validate that equals any of your known Origins that are permitted to generate those tokens. This is an extra security check that we highly recommend that you do.
+1. Use the above Public Key to verify the token's signature.
+2. Validate that the token is not expired, by checking the `exp` and `nbf` claims.
+3. If the `azp` claim exists, validate that it equals any of your known origins that are permitted to generate those tokens. This is an extra security check that we highly recommend that you do. Verifying the `azp` claim on the server side ensures that the session token is generated from the expected frontend application. For example, if you are permitting tokens retrieved from `http://localhost:3000`, then the `azp` claim should equal `http://localhost:3000`. 
 
 If the above process is successful, it means that the user is signed in to your application and you can consider them authenticated. You can also retrieve the session ID and user ID out of the token's claims.
 </Steps>
@@ -79,7 +79,7 @@ export default async function (req: NextApiRequest, res: NextApiResponse) {
 }
 ```
 
-This will return the following JSON which you can then use to validate the azp and the expiration. You then have a valid `session` and `user_id` that you can use in your application.
+This will return the following JSON which you can then use to validate the `azp` and the `exp`. You then have a valid `session` and `user_id` that you can use in your application.
 
 ```json
 {
